# basalt-launcher

./: README.md  index.html  package.json
src/: App.tsx  index.css  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  content.rs  db.rs  error.rs  lib.rs  main.rs  paths.rs  state.rs
src-tauri/src/auth/: account.rs  microsoft.rs  mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/download/: mod.rs
src-tauri/src/install/: mod.rs
src-tauri/src/java/: mod.rs
src-tauri/src/launch/: mod.rs  process.rs
src-tauri/src/loaders/: mod.rs
src-tauri/src/meta/: manifest.rs  media.rs  mod.rs  version.rs
src-tauri/src/search/: mod.rs
src/components/: Avatar.tsx  CreateInstanceModal.tsx  DependencyPrompt.tsx  EditInstanceModal.tsx  InstanceSheet.tsx  PlayButton.tsx  Select.tsx  Sidebar.tsx  TitleBar.tsx  ui.tsx
src/lib/: accent.ts  api.ts  cn.ts  loader.ts  media.ts  time.ts  types.ts  useEscape.ts
src/views/: AccountsView.tsx  ConsoleView.tsx  HomeView.tsx  InstanceView.tsx  InstancesView.tsx  ProjectView.tsx  SearchView.tsx  SettingsView.tsx
